# storage-strategist

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_IMPORT_POLICY.md  Cargo.toml  README.md  ROADMAP.md  THIRD_PARTY_NOTICES.md  benchmark-native.json  benchmark-pdu.json
.github/workflows/: bench.yml  ci.yml  desktop-package.yml
apps/desktop/: README.md  index.html  package.json  playwright.config.ts
apps/desktop/src/: App.tsx  api.ts  styles.css  types.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/desktop/tests/: smoke.spec.ts
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: analyzers.rs  categorize.rs  dedupe.rs  device.rs  diagnostics.rs  doctor.rs  eval.rs  history.rs  lib.rs  markdown.rs  model.rs  planner.rs  policy.rs  recommend.rs  role.rs  scan.rs
crates/core/src/analyzers/: dev_artifacts.rs  mod.rs  system_caches.rs  trend_analyzer.rs
crates/core/tests/: parity_test.rs
crates/service/: Cargo.toml
crates/service/src/: lib.rs  service.rs
fixtures/: active-workload-report.json  benchmark-baseline.json  eval-suite.json  games-library-report.json  media-risky-report.json  os-headroom-cloud-report.json  sample-report.json
provenance/: imported_code.json
scripts/: check_benchmark_regression.py  check_compliance.py  check_eval_kpi_thresholds.py
