[workspace]
members = ["crates/core", "crates/cli", "crates/service"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "AGPL-3.0-or-later"

[workspace.dependencies]
anyhow = "1.0"
blake3 = "1.5"
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive"] }
globset = "0.4"
once_cell = "1.20"
parallel-disk-usage = { version = "0.21.1", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.30"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
walkdir = "2.5"
