[package]
name = "storage-strategist-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[features]
default = ["pdu-backend"]
pdu-backend = ["dep:parallel-disk-usage"]

[dependencies]
anyhow.workspace = true
blake3.workspace = true
chrono.workspace = true
globset.workspace = true
parallel-disk-usage = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
sysinfo.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile = "3.16"
