[package]
name = "storage-strategist-desktop"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
storage-strategist-core = { path = "../../../crates/core" }
storage-strategist-service = { path = "../../../crates/service" }
